# PKGBUILD_tutorial

./: README.md
MEMO/: pacman.md  pkg_build.md  pkgbuild_variable.md
Rust/: README.md
Rust/build_pacman/: PKGBUILD  clean.sh  help.sh
Rust/greet/src/: main.rs
binary/: README.md
binary/pgopher/: PKGBUILD
c_lang/: README.md
c_lang/my_greet/: PKGBUILD
c_lang/my_greet/my_greet-1.0/: Makefile  main.c
dpkg/: RADME.md
dpkg/greet/: Cargo.toml
dpkg/greet/src/: lib.rs
