[package]
name = "greet"
version = "0.1.0"
authors = ["Aki <my_mail@aki.com>"]
edition = "2021"
license = "MIT"
description = "simple & small CLI application for sample of dpkg package"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
